# R-SWA-Mini

./: .gitignore  README.md  pyproject.toml  requirements.txt
scripts/: 00_check_environment.py  02_generate_text.py  03_generation_naive.py  04_kv_cache.py
src/rswa_mini/: __init__.py  attention.py  generation.py
tests/: test_attention.py  test_kv_cache.py  test_naive_generation.py  test_smoke.py
